# ISRS_SCL_Q2_Publication_Project

./: .isrs_resolved_1y9n_z0x.yaml  .isrs_resolved_33pl_4_9.yaml  .isrs_resolved_6q8ejcbx.yaml  .isrs_resolved_f8_l4z17.yaml  .isrs_resolved_iabqqhp1.yaml  .isrs_resolved_zskfvumw.yaml  CITATION.cff  EXTERNAL_VALIDATION_GUIDE.md  GNPY_WINDOWS_STEP_BY_STEP.md  LICENSE  PYTHON_FILE_MANIFEST.csv  PYTHON_FILE_MANIFEST.md  Q2_MANUSCRIPT_ALIGNMENT.txt  README.md  README_CBAND_BIAS_DIAGNOSTIC.md  README_CBAND_WAVELENGTH_BIAS.md  README_EASY_GNPY_FLAT.md  README_EXTERNAL_ONLY_CHECKER.md  README_FAST_PREVIEW.md  README_MULTIBAND_SPECTRUM_FIX.md  README_NEXT_STEPS.md  README_SCL_27_FLAT.md  README_TODAY_CBAND_PAPER_PACKAGE.md  README_TODAY_CLEAN_CBAND.md  README_UTF8_FIX.md  REMEDIATION_PROMPTS.md  RUN_GUIDE.txt  VALIDATION_REPORT.txt  VERIFICATION_REPORT.txt  all_run_experiment.py  check_gnpy_holdout_wavelengths.py  check_gnpy_wavelengths.py  config_fast_preview.yaml  config_q2_final.yaml  config_smoke.yaml  config_turbo_preview.yaml  create_missing_validation_csvs.py  diagnose_matching.py  environment.yml  export_paper_numbers.py  (+22 more)
Q3_FINAL_SUBMISSION_PACKAGE/: heldout_external_validation_status.json  q3_validation_protocol.md
Q3_HELDOUT_EVIDENCE_PACKAGE/: channel_performance_holdout_spans_1_4_8.csv  gnpy_calibration_train_1535_1550_1560.csv  gnpy_holdout_1540_1545_1555.csv  heldout_external_holdout_comparisons.csv  heldout_external_validation_requirements.csv
Repository_Source_Packaging_Tools/: build_journal_repository_snapshot.ps1  cleanup_journal_repo_safe.ps1  (+1 more)
(+327 files in other folders)
