[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isrs-scl-q2"
version = "1.0.0"
description = "Reproducible ISRS-aware S+C+L coherent-link modeling and launch-profile optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shahariar Alam Zisan"}]
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.6,<1"]

[project.scripts]
isrs-scl-study = "isrs_scl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
